tests/sksl/errors/ContinueOutsideLoop.glsl
### Compilation failed:

error: 3: continue statement must be inside a loop
error: 8: continue statement must be inside a loop
2 errors
